--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,20 +37,25 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.8.2
   firebase_auth: ^4.6.3
-  http: ^1.0.0
+  http: ^0.13.1
   syncfusion_flutter_charts: ^22.1.38
   fl_chart: ^0.63.0
   candlesticks: ^2.1.0
   liquid_pull_to_refresh: ^3.0.1
   flutter_screenutil: ^5.8.4
-  google_fonts: ^5.1.0
   chart_sparkline: ^1.0.13
+  flutter_riverpod: ^2.3.6
+  shared_preferences: ^2.2.0
+  ms_undraw: ^3.1.0+3
+
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  custom_lint:
+  riverpod_lint: ^1.3.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
